tried to create a countdown when the begin button was clicked, failed

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </section>
     <section id="quiz">
         <h2 id="title">Questions</h2>
+        <span id="count">20</span> seconds <br>
         <div id="something">
             TARGET EVERYTHING IN HERE ESSENTIALLY
         </div>
