added a countdown to the questions page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </section>
     <section id="quiz">
         <h2 id="title">Questions</h2>
-        <span id="count">20</span> seconds <br>
+        <p id="time"></p>
         <div id="something">
             TARGET EVERYTHING IN HERE ESSENTIALLY
         </div>
