got the first question to populate on the questions page when the begin button is clicked

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="quiz">
         <h2 id="title">Questions</h2>
         <p id="time"></p>
-        <div id="something">
+        <div id="content">
             TARGET EVERYTHING IN HERE ESSENTIALLY
         </div>
     </section>
