got each question and answers to populate after clicking first answer, still get error after last question

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nate's Javascript Quiz</title>
+    <title>Beginner Javascript Quiz</title>
 </head>
 <body>
     <section id="start">
@@ -17,6 +17,8 @@
         <div id="content">
             TARGET EVERYTHING IN HERE ESSENTIALLY
         </div>
+        <ol id="choices">
+        </ol>
     </section>
     <section id="end">
         <h2>Enter Your Name:</h2>
