got the quiz to work correctly, goes to submit page after quiz and timer stops, working on submit form and tracking the correct answers

--- a/index.html
+++ b/index.html
@@ -12,18 +12,22 @@
         <button>Begin</button>
     </section>
     <section id="quiz">
-        <h2 id="title">Questions</h2>
         <p id="time"></p>
+        <h2>Questions:</h2>
         <div id="content">
             TARGET EVERYTHING IN HERE ESSENTIALLY
         </div>
         <ol id="choices">
         </ol>
+        <button id="title">End Quiz</button>
     </section>
     <section id="end">
         <h2>Enter Your Name:</h2>
-        <input type="text">
-        <button>Submit</button>
+        <form id="myForm">
+            <input type="text" name="Name">
+            <button>Submit</button>
+        </form>
+        
     </section>
     <script src="./assets/script.js"></script>
 </body>
